# cs133_final_proj

./: .gitignore  CMakeLists.txt  README.md  config-file  syntax.txt
cmake/: get_eigen.cmake.in  get_pybind11.cmake.in  misc.cmake
data/: net_params.json
include/: ConvolutionLayer.hpp  Factory.hpp  Layer.hpp  LinearTransformationLayer.hpp  MaxPoolLayer.hpp  network.hpp
src/: LinearTransformationLayer.cpp  cnn.cpp  network.cpp
test/: example.cp37-win_amd64.pyd  live_demo.bat  main.py  test.cpp  test_conv.cpp  test_linear.cpp  unit_test_conv.cpp  unit_test_max_pool.cpp
